# SayIt

./: .gitignore  AGENTS.md  LICENSE.md  README.md  api.md  pyproject.toml  requirements.txt
app/: config.py  main.py
app/services/: tts_service.py
src/app/: main.py
src/app/models/: schemas.py
src/app/routers/: tts.py
src/app/services/: tts_service.py
src/frontend/: index.html
