[project]
name = "sayit"
version = "1.0.0"
description = "Public Text-to-Speech Web App powered by Kokoro"
requires-python = ">=3.10,<3.13"
dependencies = [
    "kokoro>=0.9.4",
    "torch>=2.7,<2.8",
    "soundfile>=0.12.0",
    "numpy>=1.20.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=2.0.0",
    "pydub>=0.25.0",
    "ordered-set>=4.0.0",
    "pypinyin>=0.44.0",
    "cn2an>=0.5.0",
    "jieba>=0.42.0",
    "fugashi>=1.2.0",
    "jaconv>=0.3.0",
    "mojimoji>=0.0.13",
    "unidic-lite>=1.0.8",
    "pyopenjtalk>=0.3.0",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "app"

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
